管理员可以查看用户和留言

--- a/src/main/webapp/WEB-INF/pages/about.html
+++ b/src/main/webapp/WEB-INF/pages/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
 	<title> About</title>
@@ -45,7 +45,8 @@
 					<div class="header_left">
 						<ul>
 							<li><a class="shop" href="/FireFight/shop">Shop Now</a></li>
-							<li><a class="sign" href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+<!--							<li><a class="sign" href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-user" aria-hidden="true"></i></a></li>-->
+							<li ><a class="shop"  href="/FireFight/userProfile">账户</a></li>
 
 						</ul>
 					</div>
