--- a/src/main/webapp/WEB-INF/pages/manager/manager.html
+++ b/src/main/webapp/WEB-INF/pages/manager/manager.html
@@ -39,7 +39,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top m-b-0">
             <div class="navbar-header" style="height:50px">
-                <div class="top-left-part"><a class="logo" href="manger.html"><b><img src="/FireFight/plugins/images/pixeladmin-logo.png" alt="home" /></b><span class="hidden-xs"><img src="/FireFight/plugins/images/pixeladmin-text.png" alt="home" /></span></a></div>
+                <div class="top-left-part"><a class="logo" href="manager.html"><b><img src="/FireFight/plugins/images/pixeladmin-logo.png" alt="home" /></b><span class="hidden-xs"><img src="/FireFight/plugins/images/pixeladmin-text.png" alt="home" /></span></a></div>
                 <ul class="nav navbar-top-links navbar-left m-l-20 hidden-xs">
                     <div>
                         <form role="search" class="app-search hidden-xs">
@@ -47,7 +47,7 @@
                         </form>
                     </div>
                     <div  style="clear:both; float:right; position:absolute;  right:50px;" >
-                        <a class="profile-pic" href="#"> <img src="/FireFight/plugins/images/users/varun.jpg" alt="user-img" width="36" class="img-circle"><b class="hidden-xs">Steave</b> </a>
+                        <a class="profile-pic" href="#"> <img src="/FireFight/plugins/images/users/varun.jpg" alt="user-img" width="36" class="img-circle"><b class="hidden-xs"><a th:text="${session.user.username}"></a></b> </a>
                     </div>
                 </ul>
             </div>
@@ -60,16 +60,19 @@
             <div class="sidebar-nav navbar-collapse slimscrollsidebar">
                 <ul class="nav" id="side-menu">
                     <li style="padding: 10px 0 0;">
-                        <a href="/FireFight/index" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="hide-menu">Dashboard</span></a>
+                        <a href="/FireFight/manager/manager" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="hide-menu">用户管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/profile" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i><span class="hide-menu">Profile</span></a>
+                        <a href="/FireFight/manager/postManager" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">帖子管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/basic-table" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">Basic Table</span></a>
+                        <a href="/FireFight/manager/shopManager" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i><span class="hide-menu">商品管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/blank" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i><span class="hide-menu">Blank Page</span></a>
+                        <a href="/FireFight/manager/orderManager" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">订单管理</span></a>
+                    </li>
+                    <li>
+                        <a href="/FireFight/api/message/allMessage" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i><span class="hide-menu">留言管理</span></a>
                     </li>
                 </ul>
             </div>
@@ -109,12 +112,12 @@
                                         <th>身份</th>
                                         <th>操作</th>
                                     </tr>
-                                        <tr th:each="user:${users}">
-                                            <th th:text="${user.uid}">1</th>
+                                        <tr th:each="user:${session.users}">
+                                            <th th:text="${user.uid} ">1</th>
                                             <th th:text="${user.username}">心境界</th>
                                             <th th:text="${user.gender}">男</th>
                                             <th th:text="${user.telephone}">15188418393</th>
-                                            <th th:text="${user.identify}">管理员</th>
+                                            <th th:text="${user.identify=='manager' ? '管理员':'普通用户'}">管理员</th>
                                             <th>
                                                 <button class="btn btn-primary btn-sm">
                                                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
