--- a/src/main/webapp/WEB-INF/pages/404.html
+++ b/src/main/webapp/WEB-INF/pages/404.html
@@ -36,7 +36,7 @@
                 <h1>404</h1>
                 <h3 class="text-uppercase">Page Not Found !</h3>
                 <p class="text-muted m-t-30 m-b-30">YOU SEEM TO BE TRYING TO FIND HIS WAY HOME</p>
-                <a href="manager/manger.html" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Back to home</a> </div>
+                <a href="manager/manager.html" class="btn btn-info btn-rounded waves-effect waves-light m-b-40">Back to home</a> </div>
             <footer class="footer text-center">2017 © Pixel Admin.</footer>
         </div>
     </section>
