--- a/src/main/webapp/WEB-INF/pages/manager/messageManager.html
+++ b/src/main/webapp/WEB-INF/pages/manager/messageManager.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -36,7 +36,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top m-b-0">
             <div class="navbar-header" style="height:50px">
-                <div class="top-left-part"><a class="logo" href="manger.html"><b><img src="/FireFight/plugins/images/pixeladmin-logo.png" alt="home" /></b><span class="hidden-xs"><img src="/FireFight/plugins/images/pixeladmin-text.png" alt="home" /></span></a></div>
+                <div class="top-left-part"><a class="logo" href="manager.html"><b><img src="/FireFight/plugins/images/pixeladmin-logo.png" alt="home" /></b><span class="hidden-xs"><img src="/FireFight/plugins/images/pixeladmin-text.png" alt="home" /></span></a></div>
                 <ul class="nav navbar-top-links navbar-left m-l-20 hidden-xs">
                     <div>
                         <form role="search" class="app-search hidden-xs">
@@ -44,7 +44,7 @@
                         </form>
                     </div>
                     <div  style="clear:both; float:right; position:absolute;  right:50px;" >
-                        <a class="profile-pic" href="#"> <img src="/FireFight/plugins/images/users/varun.jpg" alt="user-img" width="36" class="img-circle"><b class="hidden-xs">Steave</b> </a>
+                        <a class="profile-pic" href="#"> <img src="/FireFight/plugins/images/users/varun.jpg" alt="user-img" width="36" class="img-circle"><b class="hidden-xs"><a th:text="${session.user.username}"></a></b> </a>
                     </div>
                 </ul>
             </div>
@@ -57,16 +57,19 @@
             <div class="sidebar-nav navbar-collapse slimscrollsidebar">
                 <ul class="nav" id="side-menu">
                     <li style="padding: 10px 0 0;">
-                        <a href="/FireFight/index" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="hide-menu">Dashboard</span></a>
+                        <a href="/FireFight/manager/manager" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="hide-menu">用户管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/profile" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i><span class="hide-menu">Profile</span></a>
+                        <a href="/FireFight/manager/postManager" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">帖子管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/basic-table" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">Basic Table</span></a>
+                        <a href="/FireFight/manager/shopManager" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i><span class="hide-menu">商品管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/blank" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i><span class="hide-menu">Blank Page</span></a>
+                        <a href="/FireFight/manager/orderManager" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">订单管理</span></a>
+                    </li>
+                    <li>
+                        <a href="/FireFight/manager/messageManager" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i><span class="hide-menu">留言管理</span></a>
                     </li>
                 </ul>
             </div>
@@ -77,12 +80,7 @@
             <div class="container-fluid">
                 <div class="row bg-title">
                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-                        <h4 class="page-title">Basic Table</h4> </div>
-                    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12"> <a href="#" class="btn btn-danger pull-right m-l-20 btn-rounded btn-outline hidden-xs hidden-sm waves-effect waves-light">Upgrade to Pro</a>
-                        <ol class="breadcrumb">
-                            <li><a href="#">Dashboard</a></li>
-                            <li class="active">Basic Table</li>
-                        </ol>
+                        <h4 class="page-title">用户留言</h4> </div>
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
@@ -90,62 +88,32 @@
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="white-box">
-                            <h3 class="box-title">Basic Table</h3>
-                            <p class="text-muted">Add class <code>.table</code></p>
+                            <h3 class="box-title">所有留言</h3>
                             <div class="table-responsive">
                                 <table class="table">
                                     <thead>
                                         <tr>
-                                            <th>#</th>
-                                            <th>First Name</th>
-                                            <th>Last Name</th>
-                                            <th>Username</th>
-                                            <th>Role</th>
+                                            <th>编号</th>
+                                            <th>昵称</th>
+                                            <th>标题</th>
+                                            <th>内容</th>
+                                            <th>电话</th>
+                                            <th>地址</th>
+                                            <th>留言时间</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Deshmukh</td>
-                                            <td>Prohaska</td>
-                                            <td>@Genelia</td>
-                                            <td>admin</td>
+                                        <tr th:each="message:${allMessages}">
+                                            <td th:text="${message.m_id} ">1</td>
+                                            <td th:text="${message.name} ">昵称</td>
+                                            <td th:text="${message.title} ">标题</td>
+                                            <td th:text="${message.content} ">内容</td>
+                                            <td th:text="${message.telephone} ">电话</td>
+                                            <td th:text="${message.location} ">地址</td>
+                                            <td th:text="${message.create_time} ">留言时间</td>
+
                                         </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Deshmukh</td>
-                                            <td>Gaylord</td>
-                                            <td>@Ritesh</td>
-                                            <td>member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Sanghani</td>
-                                            <td>Gusikowski</td>
-                                            <td>@Govinda</td>
-                                            <td>developer</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4</td>
-                                            <td>Roshan</td>
-                                            <td>Rogahn</td>
-                                            <td>@Hritik</td>
-                                            <td>supporter</td>
-                                        </tr>
-                                        <tr>
-                                            <td>5</td>
-                                            <td>Joshi</td>
-                                            <td>Hickle</td>
-                                            <td>@Maruti</td>
-                                            <td>member</td>
-                                        </tr>
-                                        <tr>
-                                            <td>6</td>
-                                            <td>Nigam</td>
-                                            <td>Eichmann</td>
-                                            <td>@Sonu</td>
-                                            <td>supporter</td>
-                                        </tr>
+
                                     </tbody>
                                 </table>
                             </div>
