--- a/src/main/webapp/WEB-INF/pages/userProfile.html
+++ b/src/main/webapp/WEB-INF/pages/userProfile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -9,6 +9,7 @@
     <link href="/FireFight/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/FireFight/css/style2.css" rel="stylesheet" type="text/css" media="all" />
     <link href="/FireFight/css/font-awesome.css" rel="stylesheet">
+
     <script type="application/x-javascript">
         addEventListener("load", function () {
             setTimeout(hideURLbar, 0);
@@ -41,7 +42,7 @@
                     <ul>
                         <li><a class="shop" href="/FireFight/shop">Shop Now</a></li>
                         <!--							<li ><a   href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-user" aria-hidden="true" style="display:none"></i></a></li>-->
-                        <li ><a class="shop"  href="/FireFight/profile">账户</a></li>
+                        <li ><a class="shop"  href="/FireFight/userProfile">账户</a></li>
 
                     </ul>
                 </div>
@@ -96,8 +97,63 @@
     </div>
     <!-- banner -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <h1>这里是个人主页</h1>
         <!-- The Modal -->
+        <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+        <ol class="breadcrumb">
+<!--            <li><a href="#">Dashboard</a></li>-->
+            <li class="active">个人主页</li>
+        </ol>
+    </div>
+        <div class="col-md-8 col-xs-12">
+            <div class="white-box">
+                <form class="form-horizontal form-material">
+                    <div class="form-group">
+                        <label class="col-md-12">用户名</label>
+                        <div class="col-md-12">
+                            <input type="text" placeholder="Johnathan Doe" class="form-control form-control-line"> </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="example-email" class="col-md-12">邮箱</label>
+                        <div class="col-md-12">
+                            <input type="email" placeholder="johnathan@admin.com" class="form-control form-control-line" name="example-email" id="example-email"> </div>
+                    </div>
+                    <!-- 密码-->
+<!--                    <div class="form-group">-->
+<!--                        <label class="col-md-12">Password</label>-->
+<!--                        <div class="col-md-12">-->
+<!--                            <input type="password" value="password" class="form-control form-control-line"> </div>-->
+<!--                    </div>-->
+                    <div class="form-group">
+                        <label class="col-md-12">电话</label>
+                        <div class="col-md-12">
+                            <input type="text" placeholder="123 456 7890" class="form-control form-control-line"> </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-md-12">地址</label>
+                        <div class="col-md-12">
+                            <textarea rows="5" class="form-control form-control-line"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-sm-12">楼层</label>
+                        <div class="col-sm-12">
+                            <select class="form-control form-control-line">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-12">
+                            <button class="btn btn-success">更新信息</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
     <!--//banner -->
     <!--//banner -->
