--- a/src/main/webapp/WEB-INF/pages/index.html
+++ b/src/main/webapp/WEB-INF/pages/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 
 <head>
 	<title> Home</title>
@@ -102,21 +102,6 @@
 									<li class="active"><a href="/FireFight/index" data-hover="主页">主页</a></li>
 									<li><a href="/FireFight/about" data-hover="关于">关于</a></li>
 									<li><a href="/FireFight/blog" data-hover="动态">动态</a></li>
-<!--									<li class="dropdown">-->
-<!--										<a href="services.html" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>-->
-<!--										<ul class="dropdown-menu">-->
-<!--											<li><a href="404.html">Services</a></li>-->
-<!--											<li class="divider"></li>-->
-<!--											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>-->
-<!--												<ul class="dropdown-menu sub-menu">-->
-<!--													<li><a href="404.html">Error</a></li>-->
-<!--													<li class="divider"></li>-->
-<!--													<li><a href="gallery.html">Gallery</a></li>-->
-<!--												</ul>-->
-<!--											</li>-->
-
-<!--										</ul>-->
-<!--									</li>-->
 
 									<li><a href="/FireFight/contact" data-hover="联系我们">联系我们</a></li>
 								</ul>
@@ -472,7 +457,7 @@
 	<!-- //footer -->
 	<a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 	<!-- js -->
-	<script type="text/javascript" src="/FireFight/js/jquery-2.1.4.min.js"></script>
+<script type="text/javascript" src="/FireFight/js/jquery-2.1.4.min.js"></script>
 
 	<!--search-bar-->
 	<script src="/FireFight/js/search.js"></script>
