--- a/src/main/webapp/WEB-INF/pages/list.html
+++ b/src/main/webapp/WEB-INF/pages/list.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h1>list.jsp</h1>
-<div><img src="/FireFight/img/p_big3.jpg" alt="this is a picture"></div>
+<div><img src="/FireFight/images/banner1.jpg" alt="this is a picture"></div>
 </body>
 </html>
