--- a/src/main/webapp/WEB-INF/pages/manager/addPost.html
+++ b/src/main/webapp/WEB-INF/pages/manager/addPost.html
@@ -69,7 +69,7 @@
                         <a href="/FireFight/manager/orderManager" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">订单管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/api/message/allMessage" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i><span class="hide-menu">留言管理</span></a>
+                        <a href="/FireFight/manager/messageManager" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i><span class="hide-menu">留言管理</span></a>
                     </li>
                 </ul>
             </div>
@@ -80,43 +80,48 @@
             <div class="container-fluid">
                 <div class="row bg-title">
                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-                        <h4 class="page-title">用户留言</h4> </div>
+                        <h4 class="page-title">Profile page</h4> </div>
+                    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12"> <a href="#" class="btn btn-danger pull-right m-l-20 btn-rounded btn-outline hidden-xs hidden-sm waves-effect waves-light">Upgrade to Pro</a>
+                        <ol class="breadcrumb">
+                            <li><a href="#">Dashboard</a></li>
+                            <li class="active">Profile page</li>
+                        </ol>
                     </div>
-                    <!-- /.col-lg-12 -->
                 </div>
-                <!-- /row -->
+                <!-- /.row -->
+                <!-- .row -->
                 <div class="row">
-                    <div class="col-sm-12">
+                    <div class="col-md-8 col-xs-12">
                         <div class="white-box">
-                            <h3 class="box-title">所有留言</h3>
-                            <div class="table-responsive">
-                                <table class="table">
-                                    <thead>
-                                        <tr>
-                                            <th>编号</th>
-                                            <th>昵称</th>
-                                            <th>标题</th>
-                                            <th>内容</th>
-                                            <th>电话</th>
-                                            <th>地址</th>
-                                            <th>留言时间</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr th:each="message:${allMessages}">
-                                            <td th:text="${message.m_id} ">1</td>
-                                            <td th:text="${message.name} ">昵称</td>
-                                            <td th:text="${message.title} ">标题</td>
-                                            <td th:text="${message.content} ">内容</td>
-                                            <td th:text="${message.telephone} ">电话</td>
-                                            <td th:text="${message.location} ">地址</td>
-                                            <td th:text="${message.create_time} ">留言时间</td>
-
-                                        </tr>
-
-                                    </tbody>
-                                </table>
-                            </div>
+                            <form class="form-horizontal form-material" action="/FireFight/api/blog/postBlog" method="post">
+                                <div class="form-group">
+                                    <label class="col-md-12">标题</label>
+                                    <div class="col-md-12">
+                                        <input type="text" name="title" class="form-control form-control-line"> </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-md-12">内容</label>
+                                    <div class="col-md-12">
+                                        <textarea rows="5" name="content" class="form-control form-control-line"></textarea>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label class="col-sm-12">分类</label>
+                                    <div class="col-sm-12">
+                                        <select class="form-control form-control-line" name="sort">
+                                            <option>消防日志</option>
+                                            <option>优惠信息</option>
+                                            <option>消防知识</option>
+                                            <option>消防通知</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-sm-12">
+                                        <button class="btn btn-success" type="submit">发布</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
