--- a/src/main/webapp/WEB-INF/pages/index.html
+++ b/src/main/webapp/WEB-INF/pages/index.html
@@ -101,7 +101,7 @@
 								<ul>
 									<li class="active"><a href="/FireFight/index" data-hover="主页">主页</a></li>
 									<li><a href="/FireFight/about" data-hover="关于">关于</a></li>
-									<li><a href="/FireFight/blog" data-hover="动态">动态</a></li>
+									<li><a href="/FireFight/api/blog/allBlog" data-hover="动态">动态</a></li>
 
 									<li><a href="/FireFight/contact" data-hover="联系我们">联系我们</a></li>
 								</ul>
@@ -343,70 +343,6 @@
 </div>
 	<!-- //Popup-Box -->
 
-	<!--// pricing-->
-
-	<!-- Testimonials -->
-<!--	<div class="testimonials">-->
-<!--		<div class="container">-->
-<!--			<h3 class="tittle-w3ls">What people says</h3>-->
-<!--			<div class="inner_sec_info_w3ls_agile">-->
-<!--				<div class="col-md-6 testimonials-main">-->
-<!--						<div class="carousel slide two" data-ride="carousel" id="quote-carousel">-->
-<!--							&lt;!&ndash; Bottom Carousel Indicators &ndash;&gt;-->
-<!--							<ol class="carousel-indicators two">-->
-<!--								<li data-target="#quote-carousel" data-slide-to="0" class="active"></li>-->
-<!--								<li data-target="#quote-carousel" data-slide-to="1"></li>-->
-<!--								<li data-target="#quote-carousel" data-slide-to="2"></li>-->
-<!--							</ol>-->
-
-<!--						<div class="carousel-inner">-->
-<!--								<div class="item active">-->
-
-<!--									<div class="inner-testimonials">-->
-<!--										<img src="/FireFight/images/1.jpg" alt=" " class="img-responsive" />-->
-<!--										<div class="teastmonial-info">-->
-<!--											<h5>Andy Wovel</h5>-->
-<!--											<span>Lorem Ipsum</span>-->
-<!--											<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis hendrerit lobortis elementum, Quis nostrum exercitationem-->
-<!--												ullam corporis suscipit laboriosam. </p>-->
-<!--										</div>-->
-<!--									</div>-->
-<!--								</div>-->
-<!--								<div class="item">-->
-
-<!--									<div class="inner-testimonials">-->
-<!--										<img src="/FireFight/images/2.jpg" alt=" " class="img-responsive" />-->
-<!--										<div class="teastmonial-info">-->
-<!--											<h5>Bernard Russo</h5>-->
-<!--											<span>Lorem Ipsum</span>-->
-<!--											<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis hendrerit lobortis elementum, Quis nostrum exercitationem-->
-<!--												ullam corporis suscipit laboriosam. </p>-->
-<!--										</div>-->
-<!--									</div>-->
-<!--								</div>-->
-<!--								<div class="item">-->
-
-<!--									<div class="inner-testimonials">-->
-<!--										<img src="/FireFight/images/3.jpg" alt=" " class="img-responsive" />-->
-<!--										<div class="teastmonial-info">-->
-<!--											<h5>Alex Merphy</h5>-->
-<!--											<span>Lorem Ipsum</span>-->
-<!--											<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis hendrerit lobortis elementum, Quis nostrum exercitationem-->
-<!--												ullam corporis suscipit laboriosam. </p>-->
-<!--										</div>-->
-<!--									</div>-->
-<!--								</div>-->
-<!--								&lt;!&ndash; Carousel Buttons Next/Prev &ndash;&gt;-->
-<!--							<a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>-->
-<!--							<a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>-->
-
-<!--						</div>-->
-<!--				</div>-->
-
-<!--				</div>-->
-<!--			</div>-->
-<!--		</div>-->
-<!--	</div>-->
 	<!-- //Testimonials -->
 	<!-- footer -->
 	<footer>
