--- a/src/main/webapp/WEB-INF/pages/manager/addPost.html
+++ b/src/main/webapp/WEB-INF/pages/manager/addPost.html
@@ -60,7 +60,7 @@
                         <a href="/FireFight/manager/manager" class="waves-effect"><i class="fa fa-clock-o fa-fw" aria-hidden="true"></i><span class="hide-menu">用户管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/manager/postManager" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">帖子管理</span></a>
+                        <a href="/FireFight/api/blog/newBlogs" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">帖子管理</span></a>
                     </li>
                     <li>
                         <a href="/FireFight/manager/shopManager" class="waves-effect"><i class="fa fa-user fa-fw" aria-hidden="true"></i><span class="hide-menu">商品管理</span></a>
@@ -69,7 +69,7 @@
                         <a href="/FireFight/manager/orderManager" class="waves-effect"><i class="fa fa-table fa-fw" aria-hidden="true"></i><span class="hide-menu">订单管理</span></a>
                     </li>
                     <li>
-                        <a href="/FireFight/manager/messageManager" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i><span class="hide-menu">留言管理</span></a>
+                        <a href="/FireFight/api/message/allMessage" class="waves-effect"><i class="fa fa-columns fa-fw" aria-hidden="true"></i><span class="hide-menu">留言管理</span></a>
                     </li>
                 </ul>
             </div>
@@ -80,13 +80,7 @@
             <div class="container-fluid">
                 <div class="row bg-title">
                     <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-                        <h4 class="page-title">Profile page</h4> </div>
-                    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12"> <a href="#" class="btn btn-danger pull-right m-l-20 btn-rounded btn-outline hidden-xs hidden-sm waves-effect waves-light">Upgrade to Pro</a>
-                        <ol class="breadcrumb">
-                            <li><a href="#">Dashboard</a></li>
-                            <li class="active">Profile page</li>
-                        </ol>
-                    </div>
+                        <h4 class="page-title">发布帖子</h4> </div>
                 </div>
                 <!-- /.row -->
                 <!-- .row -->
